# ai_audio_book_notes

./: .gitignore  README.md
LSTMPlugin/: CMakeLists.txt  main.cpp  outputs_plots.ipynb
LSTMPlugin/Training/: Untitled-1.md  align.py  dist_32.ts  lstm_size_32_epoch_413_loss_0.0013.pth  to_torch_script.py  train.ipynb  train.py
LSTMPlugin/Training/env/: pyvenv.cfg
LSTMPlugin/Training/env/Scripts/: activate  activate.bat  numba
LSTMPlugin/Training/runs/Apr24_18-36-22_Skeen ssl-32-unit LSTM model with 32 hidden units/: events.out.tfevents.1777048582.Skeen.5148.0
LSTMPlugin/Training/runs/Apr24_18-39-21_Skeen ssl-32-unit LSTM model with 32 hidden units/: events.out.tfevents.1777048761.Skeen.43248.0
LSTMPlugin/Training/runs/Apr24_18-39-21_Skeen ssl-32-unit LSTM model with 32 hidden units/saved_models/: lstm_size_32_epoch_0_loss_0.1822.pth  lstm_size_32_epoch_109_loss_0.0019.pth  lstm_size_32_epoch_10_loss_0.0166.pth  lstm_size_32_epoch_12_loss_0.0163.pth  lstm_size_32_epoch_13_loss_0.0137.pth  lstm_size_32_epoch_153_loss_0.0019.pth  lstm_size_32_epoch_154_loss_0.0019.pth  lstm_size_32_epoch_157_loss_0.0018.pth  lstm_size_32_epoch_15_loss_0.0131.pth  lstm_size_32_epoch_16_loss_0.0122.pth  lstm_size_32_epoch_174_loss_0.0018.pth  lstm_size_32_epoch_190_loss_0.0017.pth  lstm_size_32_epoch_197_loss_0.0017.pth  lstm_size_32_epoch_19_loss_0.0113.pth  lstm_size_32_epoch_1_loss_0.0777.pth  lstm_size_32_epoch_21_loss_0.0102.pth  lstm_size_32_epoch_227_loss_0.0017.pth  lstm_size_32_epoch_241_loss_0.0017.pth  lstm_size_32_epoch_250_loss_0.0018.pth  lstm_size_32_epoch_26_loss_0.0095.pth  lstm_size_32_epoch_29_loss_0.008.pth  lstm_size_32_epoch_2_loss_0.0573.pth  lstm_size_32_epoch_308_loss_0.0017.pth  lstm_size_32_epoch_30_loss_0.0069.pth  lstm_size_32_epoch_314_loss_0.0017.pth  lstm_size_32_epoch_31_loss_0.0068.pth  lstm_size_32_epoch_32_loss_0.0066.pth  lstm_size_32_epoch_333_loss_0.0017.pth  lstm_size_32_epoch_358_loss_0.0017.pth  lstm_size_32_epoch_35_loss_0.0055.pth  lstm_size_32_epoch_3_loss_0.0403.pth  lstm_size_32_epoch_41_loss_0.0054.pth  lstm_size_32_epoch_42_loss_0.005.pth  lstm_size_32_epoch_44_loss_0.0043.pth  lstm_size_32_epoch_45_loss_0.0041.pth  lstm_size_32_epoch_46_loss_0.0036.pth  lstm_size_32_epoch_4_loss_0.0312.pth  lstm_size_32_epoch_500_loss_0.0018.pth  lstm_size_32_epoch_50_loss_0.0032.pth  lstm_size_32_epoch_53_loss_0.0031.pth  (+17 more)
LSTMPlugin/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
data/audio_audacity_dist/output/peaks/: audacity_dist.wav.reapeaks
data1/audio_audacity_dist/input/peaks/: clean_signal.wav.reapeaks
data1/audio_audacity_dist/output/: desktop.ini
data1/audio_ht1/input/peaks/: ht1-input.wav.reapeaks
minimal_libtorch/: .gitignore  CMakeLists.txt  main.cpp
